<resources>
    <string name="app_name">Pill Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="medication_form">Medication Form</string>
    <string name="medicine_hint">Medication Name</string>
    <string name="duration">Duration</string>
    <string name="startDate">Start Date</string>
    <string name="start_date">Start Date</string>
    <string name="no_end_date">No end date</string>
    <string name="for_x_amount_of_days">For X amount of days</string>
    <string name="until_date">Until Date</string>
    <string name="todayString">Today</string>
    <string name="untilText">Until</string>
    <string name="frequency_of_intake">Frequency:</string>
    <string name="inventory">Inventory</string>

    <string-array name="frequency_of_intake_array">
        <item>Daily</item>
        <item>Daily every X hours</item>
        <item>Every X Days</item>
        <item>Specific days of the week</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="dose">Dose</string>
    <string name="remind_every">Remind every</string>
    <string name="first_intake">First intake</string>
    <string name="last_intake">Last intake</string>
    <string name="colon">:</string>
    <string name="every">Every</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="every_below_text">Tap to select a number</string>
    <string name="pills">pill(s)</string>
    <string name="save">SAVE</string>

    <string name="done">Done</string>
    <string name="tap_to_select_a_duration">Tap to select a duration</string>
    <string name="tap_to_select_a_date">Tap to select a date</string>
    <string name="tap_to_select_first_intake">Tap to select first intake</string>
    <string name="tap_to_select_duration">Tap to select duration</string>
    <string name="tap_to_select_a_dose">Tap to select a dose</string>
    <string name="description">Close alarm instance</string>
    <string name="channel_name">Medication Reminder</string>
    <string name="channel_description">Notification to take medication</string>
    <string name="choose_a_time">Choose a time</string>

</resources>