<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Frequency.SpecificDaysFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/form_margin_left"
        android:layout_marginStart="@dimen/form_margin_left">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textAppearance="?android:textAppearanceMedium"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="15dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:textAppearanceMedium"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:textAppearanceMedium"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:textAppearanceMedium"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:textAppearanceMedium"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_reminder"
            android:textSize="20sp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</FrameLayout>