<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Frequency.DailyEveryXHours">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/form_margin_left"
        android:layout_marginLeft="@dimen/form_margin_left">

        <TextView
            android:id="@+id/dose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/dose"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/doseBelowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_select_a_dose"
            app:layout_constraintTop_toBottomOf="@id/dose" />

        <TextView
            android:id="@+id/remindEvery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/remind_every"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/doseBelowText" />

        <TextView
            android:id="@+id/remindEveryBelowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_select_duration"
            app:layout_constraintTop_toBottomOf="@id/remindEvery" />

        <TextView
            android:id="@+id/firstIntake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/first_intake"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/remindEveryBelowText" />

        <TextView
            android:id="@+id/firstIntakeBelowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_select_first_intake"
            app:layout_constraintTop_toBottomOf="@id/firstIntake" />

        <TextView
            android:id="@+id/lastIntake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/last_intake"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/firstIntakeBelowText" />

        <TextView
            android:id="@+id/lastIntakeBelowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tap to select last intake"
            app:layout_constraintTop_toBottomOf="@id/lastIntake" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>