<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.DurationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:onClick="showDatePicker">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="showDatePicker"
            android:text="@string/start_date"
            android:textSize="20sp"
            android:theme="@style/clickableView" />

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todayString"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/startDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/noDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layoutDirection="rtl"
            android:text="@string/no_end_date"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/untilRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layoutDirection="rtl"
            android:text="@string/until_date"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/xDaysRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/for_x_amount_of_days"
            android:textSize="20sp" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp">

        <Button
            android:id="@+id/durationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/done"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>