<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/closeReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
            android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
            android:drawablePadding="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/choose_a_time"
            app:layout_constraintLeft_toRightOf="@+id/closeReminder"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp" />

        <Button
            android:id="@+id/reminderDosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
            android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
            android:drawablePadding="5dp"
            android:text="@string/dose"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>